[package]
name = "arrow-odbc-py"
version = "0.1.0"
edition = "2021"

# This is only published as part of a python wheel, not as a stand alone crate.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Name needs to be identical to python package name
name = "arrow_odbc"
crate-type = ["cdylib"]

[dependencies]
arrow-odbc = "0.28.5"
# arrow would be included indirectly using arrow-odbc, but we need to explicitly specify the ffi
# feature.
arrow = { version = "41.0.0", default-features = false, features = ["ffi"] }
lazy_static = "1.4.0"
stderrlog = "0.5.4"
log = "0.4.18"

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true
