[package]
name = "arrow-odbc-c"
version = "0.1.0"
edition = "2021"

# This is only published as part of a python wheel, not as a stand alone crate.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow-odbc = "0.4.1"
lazy_static = "1.4.0"
