[package]
name = "native"
version = "0.1.0"
edition = "2021"

# This is only published as part of a python wheel, not as a stand alone crate.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Name needs to be identical to python package name
name = "native"
crate-type = ["cdylib"]

[dependencies]
arrow-odbc = "0.6.2"
lazy_static = "1.4.0"
